@@ -79,17 +79,10 @@ li.mjs-nestedSortable-collapsed.mjs-nestedSortable-hovering div {
     padding: 0;
 }
 .ui-icon-minusthick {
-    background-position: -64px -128px;
+	background-image: url(../icons/16/nested-minus.png);
 }
 .ui-icon-plusthick {
-    background-position: -32px -128px;
-}
-.ui-icon, .ui-widget-content .ui-icon {
-    background-image: url(../icons/ui-icons_222222_256x240.png);
-}
-.ui-icon {
-    width: 16px;
-    height: 16px;
+	background-image: url(../icons/16/nested-plus.png);
 }
 .ui-icon {
     display: block;
